--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,4 +38,11 @@ body {
     display: grid;
 
     grid-template-rows: 80vh min-content 40vw repeat(3, min-content); //we can also use auto in place of min content, auto will also make sure to fit all the content
+    grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    
+    & > * {
+        padding: 40px;
+        font-size: 3rem;
+    }
+    
 }
