--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -9,10 +9,25 @@
 
 .heading-2 {
     @extend %heading;
+
+    font-size: 4rem;
+    font-style: italic;
+    line-height: 1;
+
+    &--light {
+        color: $color-grey-light-1;
+    }
+
+    &--dark {
+        color: $color-grey-dark-1;
+    }
 }
 
 .heading-3 {
     @extend %heading;
+    font-size: 1.6rem;
+    color: $color-primary;
+    text-transform: uppercase;
 }
 
 .heading-4 {
@@ -26,4 +41,40 @@
     &--dark {
         color: $color-grey-dark-1;
     }
+}
+
+
+.btn {
+    background-color: $color-primary;
+    color: white;
+    border: none;
+    border-radius: 0;
+    font-family: $font-display;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    transition: all .2s;
+
+    &:hover {
+        background-color: $color-primary-dark;
+    }
+}
+
+//UTILITIES  we made the helper classes because some components are reusable and we dont want them to have a permanent margin just because we want a margin in this project
+
+.margin-bottom-small {
+    margin-bottom: 2rem;
+}
+
+.margin-bottom-medium {
+    margin-bottom: 3rem;
+}
+
+.margin-bottom-large {
+    margin-bottom: 4rem;
+}
+
+.margin-bottom-huge {
+    margin-bottom: 8rem;
 }
