--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,6 +2,32 @@
     &__pictures {
         background-color: $color-primary;
         grid-column: full-start / col-end 4;
+        background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../images/back.jpg); // to specify a linear gradient we must specify to color-stops
+        
+
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+
+        align-items: center; //we used this property to center the image because all images have a intrinsic aspect ratio so even if we tell them to fill up the container they wont and will try to follow the aspect ratio
+    }
+
+    &__img--1 {
+        width: 100%; //we always specify width for images to be 100% so they are flexible
+
+        grid-row: 2 / 6;
+        grid-column: 2 / 6;
+        box-shadow: 0 2rem 5rem rgba(#000, .1);
+    }
+
+    &__img--2 {
+        width: 115%;
+
+        grid-row: 4 / 6;
+        grid-column: 4 / 7;
+        z-index: 20;
+
+        box-shadow: 0 2rem 5rem rgba(#000, .2);
     }
 
     &__content {
