--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,7 +2,7 @@
     &__pictures {
         background-color: $color-primary;
         grid-column: full-start / col-end 4;
-        background-image: linear-gradient(rgba($color-pgit rimary, .5), rgba($color-primary, .5)), url(../images/back.jpg); // to specify a linear gradient we must specify to color-stops
+        background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../images/back.jpg); // to specify a linear gradient we must specify to color-stops
         
 
         display: grid;
