--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,47 @@
 .footer {
     background-color: $color-secondary;
     grid-column: full-start / full-end;
+
+    padding: 8rem;
+}
+
+.nav {
+    list-style: none;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem; //we couls have used flexbox for this element but with flexbx we dont have the option of adding gaps between the elements and with grid we can easily do that without specifying the margin for the last element. also grid doesnt add any margin at the end of the container like flex box would do if we use margin right on an element
+    align-items: center;
+    
+    &__item {
+    }
+
+    &__link:link,
+    &__link:visited {
+        font-size: 1.4rem;
+        color: white;
+        text-decoration: none;
+        font-family: $font-display;
+        text-transform: uppercase;
+        text-align: center;
+        padding: 1.5rem;
+        display: block;
+        transition: all .2s;
+    }
+
+    &__link:hover,
+    &__link:active {
+        background-color: rgba($color: #fff, $alpha: .05);
+        transform: translateY(-3px);
+    }
+}
+
+.copyright {
+    font-size: 1.4rem;
+    color: $color-grey-light-2;
+    margin-top: 6rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 70%;
 }
