--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -2,4 +2,36 @@
     background-color: $color-primary;
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1 / -1;
+
+    display: flex;
+    justify-content: center;
+}
+
+.nav-btn {
+    border: none;
+    border-radius: 0;
+
+    background-color: white;
+    height: 2px;
+    width: 4.5rem;
+    margin-top: 4rem;
+
+    &::before, 
+    &::after {
+        content: "";
+        display: block;
+        background-color: white;
+        height: 2px;
+        width: 4.5rem;
+        // transform-origin: center center; //transform-origin property is applied to change the transform-origin of the element or pseudo-element whose transform we need to affect it to, so if theres a transform on ::before element we will specify the transform origin on the ::before element itself.
+
+    }
+
+    &::before {
+        transform: translateY(-1.5rem);
+    }
+
+    &::after {
+        transform: translateY(1.3rem);
+    }
 }
