--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -25,13 +25,33 @@
     }
 
     &__seenon-text {
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
 
+        display: grid;
+        grid-template-columns: 1fr max-content 1fr;
+        grid-column-gap: 1.5rem;
+        align-items: center;
+
+
+        &::before,
+        &::after {
+            content: "";
+            height: 1px;
+            display: block;
+            background-color: currentColor; //currentColor take the current text color and uses that one
+        }
     }
 
     &__seenon-logos {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 3rem;
+        justify-items: center;
 
         img {
             height: 2.5rem;
+            filter: brightness(70%); //100% is the default and anything less make it darker and anything more than that makes it brighter
         }
     }
 }
