--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -1,10 +1,10 @@
-.gallery {
+.gallery { 
     background-color: $color-grey-light-1;
     grid-column: full-start / full-end;
 
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(7, 5vw);
+    grid-template-rows: repeat(7, 5vw); //instead of this we could have done this one other way too which is (preset the height of the row that contains the gallery container and then we could use the fr unit to define the height of the rows inside the container)
     grid-gap: 1.5rem;
     padding: 1.5rem;
 
