--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,4 +1,37 @@
 .realtors {
     background-color: $color-secondary;
     grid-column: col-start 7 / full-end;
+    padding: 3rem;
+
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-row-gap: 2rem;
+    justify-items: center;
+
+    &__list {
+        display: grid;
+        grid-template-columns: min-content max-content;
+        grid-column-gap: 2rem;
+        grid-row-gap: 5vh; //this spacing will change whenever we change the height of the viewport
+        // justify-content: center;
+        // align-content: center;
+        align-items: center;
+    }
+
+    &__img {
+        width: 7rem;
+        border-radius: 50%;
+        display: block;
+    }
+
+    &__details {
+
+    }
+
+    &__sold {
+        text-transform: uppercase;
+        color: $color-grey-light-2;
+        margin-top: -3px;
+    }
 }
