--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,12 @@ $color-grey-dark-2: #6D5D4B;
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
+//RESPONSIVE BREAKPOINTS
+$bp-largest: 75em; //1200px
+$bp-large: 62.5em; //1000px
+
+
+
 *,
 *::before,
 *::after {
@@ -25,6 +31,10 @@ $font-display: 'Josefin Sans', sans-serif;
 html {
     box-sizing: border-box;
     font-size: 62.5%;  //10px / 16px = 62.5% -> 1rem = 10px
+
+    @media only screen and (max-width: $bp-largest) {
+        font-size: 50%; //1rem = 8px
+    }
 }
 
 body {
@@ -44,5 +54,10 @@ body {
     //     padding: 40px;
     //     font-size: 3rem;
     // }
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content); //we can also use auto in place of min content, auto will also make sure to fit all the content
+        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+    }
     
 }
