--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,8 +8,8 @@
     padding-top: 4rem;
 
     display: grid;
-    grid-template-rows: 1fr min-content 6rem 1fr;
-    grid-template-columns: max-content;
+    grid-template-rows: 1fr min-content mimax(min-content, 6rem) 1fr;
+    grid-template-columns: mimmax(min-content, max-content);
     grid-row-gap: 1.5rem;
 
     justify-content: center;
@@ -48,9 +48,11 @@
         grid-template-columns: repeat(4, 1fr);
         grid-column-gap: 3rem;
         justify-items: center;
+        align-items: center;
 
         img {
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%; //added this for responsiveness of images
             filter: brightness(70%); //100% is the default and anything less make it darker and anything more than that makes it brighter
         }
     }
