--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -9,6 +9,10 @@
     grid-row-gap: 2rem;
     justify-items: center;
 
+    @media only screen and (max-width: $bp-medium) {
+        grid-column: 1 / -1;
+    }
+
     &__list {
         display: grid;
         grid-template-columns: min-content max-content;
@@ -17,6 +21,14 @@
         // justify-content: center;
         // align-content: center;
         align-items: center;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-template-columns: repeat(3, min-content max-content); //we can define multiple tracks in the repeat function 
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            grid-template-columns: min-content max-content;
+        }
     }
 
     &__img {
