--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,13 +3,18 @@
         background-color: $color-primary;
         grid-column: full-start / col-end 4;
         background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../images/back.jpg); // to specify a linear gradient we must specify to color-stops
-        
+        background-size: cover;
 
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(6, 1fr);
-
         align-items: center; //we used this property to center the image because all images have a intrinsic aspect ratio so even if we tell them to fill up the container they wont and will try to follow the aspect ratio
+        
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / -1;
+            padding: 6rem;
+        }
     }
 
     &__img--1 {
@@ -18,6 +23,11 @@
         grid-row: 2 / 6;
         grid-column: 2 / 6;
         box-shadow: 0 2rem 5rem rgba(#000, .1);
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / 5;
+            grid-row: 1 / -1;
+        }
     }
 
     &__img--2 {
@@ -28,6 +38,11 @@
         z-index: 20;
 
         box-shadow: 0 2rem 5rem rgba(#000, .2);
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-row: 1 / -1;
+            width: 100%;
+        }
     }
 
     &__content {
@@ -44,6 +59,11 @@
         display: grid;
         align-content: center;
         justify-items: start;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / -1;
+            grid-row: 5 / 6;
+        }
     }
 
     &__text {
